# fastapi-drift

./: .gitignore  Makefile  README.md  pyproject.toml
src/fastapi_drift/: app.py  loaders.py  locust.py  monitoring.py  predict.py  trainer.py
src/fastdrift/: app.py  loaders.py  locust.py  monitoring.py  predict.py  schemas.py
static/: drift.html
