[project]
name = "fastapi_drift"
version = "0.0.1"
authors = [
    { name = "Georgios Karakostas, email = <https://www.linkedin.com/in/geokarak>" },
]
dependencies = [
    "evidently",
    "fastapi",
    "locust",
    "pandas",
    "scikit-learn",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["A", "B", "C", "E", "Q"]
